# freshrdi

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  entry.cpp  freshrdi.hpp  freshrdi_test.cpp  load.cpp  load.hpp
tests/messagebox/: CMakeLists.txt  main.cpp  messagebox.dll.hpp.in  messagebox.hpp
